test/conformance/chainsaw/generate/clusterpolicy/standard/existing/different-generate-existing-values-reorder/generated-resources.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   labels:
#     created-by: kyverno
#   name: default-deny
#   namespace: red-ns
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    created-by: kyverno
  name: default-deny
  namespace: green-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
