test/conformance/chainsaw/generate/clusterpolicy/standard/existing/different-generate-existing-values-reorder/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: different-generate-existing-values-reorder
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
