test/conformance/chainsaw/generate/clusterpolicy/standard/existing/different-generate-existing-values-reorder/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: different-generate-existing-values-reorder
spec:
  rules:
  - name: generate-config-map
    match:
      any:
      - resources:
          kinds:
          - Namespace
          names:
          - red-ns
    generate:
      generateExisting: false
      synchronize: true
      apiVersion: v1
      kind: ConfigMap
      name: zk-kafka-address
      namespace: "{{request.object.metadata.name}}"
      data:
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
        data:
          ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
          KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
  - name: generate-network-policy
    match:
      any:
      - resources:
          kinds:
          - Namespace
          names:
          - green-ns
    generate:
      generateExisting: true
      kind: NetworkPolicy
      apiVersion: networking.k8s.io/v1
      name: default-deny
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      data:
        metadata:
          labels:
            created-by: kyverno
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
